# device_user_agent

./: .flutter-plugins  .flutter-plugins-dependencies  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: python.yml
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/acmesoftware/dua/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/runner/: Runner.rc
lib/: device_user_agent.dart
lib/src/: agent_info.dart
lib/src/agents/: android_agent_info.dart  ios_agent_info.dart  linux_agent_info.dart  macos_agent_info.dart  windows_agent_info.dart
lib/src/core/: agent_source.dart  flutter_binding.dart  platform_agent_info.dart
lib/src/web/: io_user_agent.dart  web_user_agent.dart
parser/python/: README.md  pyproject.toml
parser/python/src/device_user_agent/: __init__.py
