[project]
name = "device-user-agent"
version = "0.1.0"
description = "Parses user agent string built with the device_user-agent flutter package."
authors = [
    {name = "Sarbagya Dhaubanjar", email = "sarbagyastha@gmail.com"},
]
dependencies = [
    "pydantic>=2.7.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
