[project]
name = "device-user-agent"
version = "0.1.0"
description = "Parses user agent string built with the device_user-agent flutter package."
authors = [
    {name = "Sarbagya Dhaubanjar", email = "sarbagyastha@gmail.com"},
]
dependencies = [
    "pydantic>=2.7.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/AcmeSoftwareLLC/device_user_agent/"
Repository = "https://github.com/AcmeSoftwareLLC/device_user_agent/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
version = { source = "file", path = "src/device_user_agent/__init__.py" }
distribution = true
